2009-09-11  Leonardo Ferreira Fontenelle <leonardof@gnome.org>
    * classix: Isolated the code that parses lines from the cid10n4a.txt file,
      for future reuse in an SQLite importer.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-09-11  Leonardo Ferreira Fontenelle <leonardof@gnome.org>
+
+    * classix: Isolated the code that parses lines from the cid10n4a.txt file,
+      for future reuse in an SQLite importer.
+
 2009-08-29 Luiz Armesto <luiz.armesto@gmail.com>
 
     * classix{,.ui}: Added progressbar and stop button.
