--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-09-21  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
+	* src/main.py: Don't search twice for the same string.
+
+2009-09-21  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
 	* src/main.py: Don't stop a search, nor start a new one, when the search
 	text entry is empty.
 
