--- a/branches/maemo/ChangeLog
+++ b/branches/maemo/ChangeLog
@@ -1,3 +1,28 @@
+2009-09-23  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* Makefile.am: Removed data/classix.gz.
+	* README: Removed information about data/classix.gz.
+	* data/classix.gz: Removed because the SQLite 3 back end has feature
+	parity with the deprecated gziped text file back end.
+	* src/main.py: Removed obsolete code.
+
+2009-09-22  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* data/classix.ui:
+	- Set default window title to 480x320;
+	- Allow GtkTreeView to shrink when the matches for current search are
+	  less wide than those in the previous search.
+	- Don't show text in the progress bar or the "Stop" button.
+	* src/main.py: Fix progress in progress bar for searches with the 
+	SQLite3 back end (it only showed 0.0 or 1.0).
+
+2009-09-22  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* src/main.py:
+	- Handle exception when checking for the string in the previous search 
+	  but there's no previous search.
+	- Display progress bar for searches using the SQLite 3 back end.
+
 2009-09-21  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* src/main.py: Don't search twice for the same string.
