* Merged changes from trunk (revision 27 to 28) and make additional 	changes to debian/{control,patches}.
2009-10-03  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	* Makefile.am:
	* configure.ac:
	* data/Makefile.am:
	* src/Makefile.am:
	- Package name is now "Classix", while tarname remains "classix".
	- Added built-in support for peculiar .desktop file location
	  in Maemo systems.
	- Split makefiles among directories. I hope this time I did fix
	  "make distcheck".
	* debian/*: removed dependency on dpatch.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2009-10-03  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* Makefile.am:
+	* configure.ac:
+	* data/Makefile.am:
+	* src/Makefile.am:
+	- Package name is now "Classix", while tarname remains "classix".
+	- Added built-in support for peculiar .desktop file location
+	  in Maemo systems.
+	- Split makefiles among directories. I hope this time I did fix
+	  "make distcheck".
+	* debian/*: removed dependency on dpatch.
+
 2009-09-29  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* debian/patches/*: Updated to current Makefile.{am,in}.
@@ -61,8 +74,8 @@
 
 2009-09-21  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
-	* src/main.py: Don't stop a search, nor start a new one, when the search
-	text entry is empty.
+	* src/main.py: Don't stop a search, nor start a new one, when the
+	search text entry is empty.
 
 2009-09-19  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
@@ -94,37 +107,37 @@
 
 2009-09-18  Leonardo Ferreira Fontenelle <leonardof@gnome.org>
 
-        * classix: moved to classix.py.
+	* classix: moved to classix.py.
 
 2009-09-11  Leonardo Ferreira Fontenelle <leonardof@gnome.org>
 
-        * classix: Added SQLite search backend. It is already the default, with
-        a great performance improvement: 2.8 times quicker when running on an
-        N800's SD card. There is a regression, though: the progress bar is not
-        displayed.
-        * classix.db: Added
-        * classix.gz: Removed. See README for instructions on how to get one.
-        * README: Updated with information on how to create a new database if 
-        necessary. Added information on why the name "Classix".
+	* classix: Added SQLite search backend. It is already the default,
+	with a great performance improvement: 2.8 times quicker when running
+	on an N800's SD card. There is a regression, though: the progress bar
+	is not displayed.
+	* classix.db: Added
+	* classix.gz: Removed. See README for instructions on how to get one.
+	* README: Updated with information on how to create a new database if 
+	necessary. Added information on why the name "Classix".
 
 2009-09-11  Leonardo Ferreira Fontenelle <leonardof@gnome.org>
 
-        * classix: Removed debugging code.
+	* classix: Removed debugging code.
 
 2009-09-11  Leonardo Ferreira Fontenelle <leonardof@gnome.org>
 
-        * classix: Isolated the code that parses lines from the cid10n4a.txt
-        file, for future reuse in an SQLite importer.
+	* classix: Isolated the code that parses lines from the cid10n4a.txt
+	file, for future reuse in an SQLite importer.
 
 2009-08-29  Luiz Armesto <luiz.armesto@gmail.com>
 
-        * classix{,.ui}: Added progressbar and stop button.
+	* classix{,.ui}: Added progressbar and stop button.
 
 2009-08-29  Leonardo Ferreira Fontenelle <leonardof@gnome.org>
 
-        * classix: Fixed case insensitive search (thanks to Luiz Fernando
-        Armesto). Closes issue #1.
+	* classix: Fixed case insensitive search (thanks to Luiz Fernando
+	Armesto). Closes issue #1.
 
 2009-08-29  Leonardo Ferreira Fontenelle <leonardof@gnome.org>
 
-        * classix{,.gz,.ui}, COPYING, README: Initial commit.
+	* classix{,.gz,.ui}, COPYING, README: Initial commit.
