--- a/branches/maemo/ChangeLog
+++ b/branches/maemo/ChangeLog
@@ -1,3 +1,10 @@
+2009-10-04  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* debian/changelog: Information for first release.
+	* debian/control: Removed obsolete dpatch dependency.
+	* debian/rules: Passed PYTHON="/usr/bin/python2.5" so that the package 
+	can be built in a system with Python 2.6.
+
 2009-10-03  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* Makefile.am:
