--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-10-05  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* debian/changelog: Changed Debian version to the name ("Diablo")
+	* debian/patches/*: Removed obsolete files.
+
 2009-10-04  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* README: Improved information on dependencies and building.
