--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-07  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	* NEWS: Updated with information for release 0.1.
+
 2009-10-04  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
 	* README: Improved information on dependencies and building.
