--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,5 +1,9 @@
 2009-10-07  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
 
+	* configure.ac: Post release version bump to 0.2.
+
+2009-10-07  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
 	* NEWS: Updated with information for release 0.1.
 
 2009-10-04  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
